# testwasmrpc

./: Cargo.toml  Makefile.toml  README.md
callee/: Cargo.toml
callee-stub/: Cargo.toml
callee-stub/src/: bindings.rs  lib.rs
callee/src/: bindings.rs  lib.rs
callee/wit/: callee.wit
callee2/: Cargo.toml
callee2-stub/: Cargo.toml
callee2-stub/src/: bindings.rs  lib.rs
callee2/src/: bindings.rs
caller/: Cargo.toml
caller-stub/: Cargo.toml
caller-stub/src/: bindings.rs  lib.rs
caller-stub/wit/: _stub.wit
caller/src/: bindings.rs  lib.rs
caller/wit/: caller.wit
