[package]
name = "callee"
edition = "2021"
version = "0.0.1"

[package.metadata.component.target]
world = "callee"
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."test:callee2"]
path = "wit/deps/test_callee2"

[package.metadata.component.target.dependencies."test:callee2-stub"]
path = "wit/deps/test_callee2-stub"

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
