[package]
name = "caller"
edition = "2021"
version = "0.0.1"

[package.metadata.component.target]
world = "caller"
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."test:callee"]
path = "wit/deps/test_callee"

[package.metadata.component.target.dependencies."test:callee-stub"]
path = "wit/deps/test_callee-stub"

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
